Added gui to the text of learn trading tab

--- a/stock/templates/background.html
+++ b/stock/templates/background.html
@@ -69,6 +69,31 @@ table,td,th{
 
 {%endblock%}
 {%block body%}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+    </style>
+</head>
+<body>
     <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">Background</h1>
     <h2>1.1 &#8211; Overview</h2>
 <p>The previous module set us on a good plane with a basic understanding of the stock markets. Taking cues from the previous module, we now know that developing a well-researched perspective is critical for stock market success. A good point of view should have a directional view and should also include information such as:</p>
@@ -106,4 +131,6 @@ table,td,th{
 <li><strong>Risk ­</strong>– Often, traders initiate a trade for a certain reason; however, in case of an adverse movement in the stock, the trade starts making a loss. Usually, in such situations, traders hold on to their loss-making trade with a hope they can recover the loss. Remember, TA based trades are short term, in case the trade goes sour, do remember to cut the losses and move on to identify another opportunity.</li>
 </ol>
 <hr />
+</body>
+</html>
 {%endblock%}
