--- a/stock/templates/cashflow_statement.html
+++ b/stock/templates/cashflow_statement.html
@@ -69,6 +69,31 @@ table,td,th{
 
 {%endblock%}
 {%block body%}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+    </style>
+</head>
+<body>
     <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">The Cashflow Statement</h1>
     <h2>8.1 – Overview</h2>
 <p>The Cash flow statement is a significant financial statement, as it reveals how much cash the company is actually generating. Is this information not revealed in the P&amp;L statement you may think? Well, the answer is both a yes and a no.</p>
@@ -311,4 +336,6 @@ table,td,th{
 <p>The cash flow statement provides information to the users of the financial statements about the entity’s ability to generate cash and cash equivalents and indicates the cash needs of a company. Cash flows are prepared on a historical basis providing information about the cash and cash equivalents, classifying cash flows in to operating, financing and investing activities. The final number of cash flow tells us how much money the company has in its bank account.</p>
 <p>We have so far looked into how to read the financial statements and what to expect from each of them. We have not yet ventured into how to analyze these numbers. One of the ways to analyze the financial numbers is by calculating a few important financial ratios. In fact, we will focus on the financial ratios in the next few chapters.</p>
 <hr />
+</body>
+</html>
 {%endblock%}
