--- a/stock/templates/dow_theory2.html
+++ b/stock/templates/dow_theory2.html
@@ -69,6 +69,31 @@ table,td,th{
 
 {%endblock%}
 {%block body%}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+    </style>
+</head>
+<body>
     <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">The Dow Theory (Part 2)</h1>
     <h2>13.1 – Trading Range</h2>
 <p>The concept of the range is a natural extension to the double and triple formation. The stock attempts to hit the same upper and lower price level multiple times for an extended period of time in a range. This is also referred to as the sideways market. As the price oscillates in a narrow range without forming a particular trend, it is called a sideways market or sideways drift. So, when both the buyers and sellers are not confident about the market direction, the price would typically move in a range. Hence, typically long term investors would find the markets a bit frustrating during this period.</p>
@@ -188,5 +213,5 @@ RRR: 7.17/7.18 = ~ 1.0</p>
 <p>We have covered many aspects of technical analysis in this module. I can assure you the topics covered here are good enough to put you on a strong platform. You may believe there is a need to explore other patterns and indicators that we have not discussed here. If we have not discussed a pattern or an indicator here on Varsity, do remember it is for a specific purpose. So be assured that you have all that you need to begin your journey with Technical analysis.</p>
 <p>If you can devote time to understanding each one of these topics thoroughly, then you can be certain about developing a strong TA based thinking framework. The next logical progression from here would be to explore ideas behind backtesting trading strategies, risk management, and trading psychology—all of which we will cover in the subsequent modules.</p>
 <p>In the next concluding chapter, we will discuss a few practical aspects that will help you start with Technical Analysis.</p>
-<hr />
+<hr /></body></html>
 {%endblock%}
