--- a/stock/templates/dow_theory_1.html
+++ b/stock/templates/dow_theory_1.html
@@ -69,6 +69,31 @@ table,td,th{
 
 {%endblock%}
 {%block body%}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+    </style>
+</head>
+<body>
     <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">The Dow Theory (Part 1)</h1>
     <p>The Dow Theory has always been a very integral part of technical analysis. The Dow Theory was used extensively even before the western world discovered candlesticks. In fact, even today, Dow Theory concepts are being used. In fact, traders blend the best practices from Candlesticks and Dow Theory.</p>
 <p>The Dow Theory was introduced to the world by Charles H. Dow, who also founded the Dow-Jones financial news service (Wall Street Journal). During his time, he wrote a series of articles starting from the 1900s which in the later years was referred to as ‘The Dow Theory’. Much credit goes to William P Hamilton, who compiled these articles with relevant examples over a period of 27 years. Much has changed since the time of Charles Dow, and hence there are supporters and critics of the Dow Theory.</p>
@@ -163,5 +188,5 @@ table,td,th{
 <p>As a rule of thumb, the more number of times the price tests, and reacts to a certain price level, the more sacred the price level is considered. Therefore by this, the triple formation is considered more powerful than the double formation.</p>
 <p>The following chart shows a triple top formation for DLF Limited. Notice the sharp sell-off after testing the price level for the 3<sup>rd</sup> time, thus completing the triple top.</p>
 <p><strong><img loading="lazy" class="aligncenter size-full wp-image-846" src="http://zerodha.com/varsity/wp-content/uploads/2014/10/M2-Ch17-Chart3.jpg" alt="M2-Ch17-Chart3" width="623" height="225" /></strong></p>
-<hr />
+<hr /></body></html>
 {%endblock%}
