--- a/stock/templates/fundamental_analysis.html
+++ b/stock/templates/fundamental_analysis.html
@@ -43,6 +43,31 @@
 {%endblock%}
 {%block body %} 
 {% load static %}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+    </style>
+</head>
+<body>
 <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color:yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">Fundamental Analysis</h1>
 
 <div class="card-group col-lg-12 " style="text-align: center;">
@@ -152,4 +177,6 @@
     </div>
   </div>
 </div>
+</body>
+</html>
 {%endblock%}
