--- a/stock/templates/getting_started_candlesticks.html
+++ b/stock/templates/getting_started_candlesticks.html
@@ -69,6 +69,31 @@ table,td,th{
 
 {%endblock%}
 {%block body%}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+    </style>
+</head>
+<body>
     <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">Getting Started With Candlesticks</h1>
     <h2>4.1 – History tends to repeat itself &#8211; The big assumption</h2>
 <p>As mentioned earlier, one of the key assumptions in technical analysis is that we rely on the fact that history tends to repeats itself. This probably is one of the most important assumptions in Technical Analysis.</p>
@@ -135,4 +160,5 @@ table,td,th{
 </ul>
 <p>In the next chapter, we will begin by learning about single candlestick patterns.</p>
 <hr />
+</body></html>
 {%endblock%}
