--- a/stock/templates/indicators.html
+++ b/stock/templates/indicators.html
@@ -69,6 +69,31 @@ table,td,th{
 
 {%endblock%}
 {%block body%}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+    </style>
+</head>
+<body>
     <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">Indicators</h1>
     <p>If you look at a stock chart displayed on a trader’s trading terminal, you are most likely to see lines running all over the chart. These lines are called the ‘Technical Indicators’. A technical indicator helps a trader analyze the price movement of a security.</p>
 <p>Indicators are independent trading systems introduced to the world by successful traders. Indicators are built on preset logic using which traders can supplement their technical study (candlesticks, volumes, S&amp;R) to arrive at a trading decision. Indicators help in buying, selling, confirming trends, and sometimes predicting trends.</p>
@@ -221,4 +246,5 @@ table,td,th{
 <p>Of course, I urge you to explore the parameters that work for you. In fact, this is how you would eventually develop as a successful trader.</p>
 <p>Finally, do remember RSI is not used often as a standalone indicator by traders; it is used along with other candlestick patterns and indicators to study the market.</p>
 <hr />
+</body></html>
 {%endblock%}
