--- a/stock/templates/intro_fund_analy.html
+++ b/stock/templates/intro_fund_analy.html
@@ -58,6 +58,31 @@ table,td,th{
 
 {%endblock%}
 {%block body%}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+    </style>
+</head>
+<body>
     <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">Introduction to Fundamental Analysis</h1>
     <h2>1.1 &#8211; Overview</h2>
 <p>Fundamental Analysis (FA) is a holistic approach to study a business. When an investor wishes to invest in a business for the long term (say 3 – 5 years), it becomes essential to understand the business from various perspectives. It is critical for an investor to separate the daily short term noise in the stock prices and concentrate on the underlying business performance. Over the long term, a fundamentally strong company&#8217;s stock prices tend to appreciate, thereby creating wealth for its investors.</p>
@@ -98,4 +123,6 @@ table,td,th{
 </ol>
 <p>With just these four tools, one can develop a fundamental analysis that can rival institutional research. You can believe me when I say that you don’t need any other tool to do good fundamental research. In fact, even at the institutional level, the objective is to keep the research simple and logical.</p>
 <hr />
+</body>
+</html>
 {%endblock%}
