--- a/stock/templates/introducing_tech_analysis.html
+++ b/stock/templates/introducing_tech_analysis.html
@@ -69,6 +69,31 @@ table,td,th{
 
 {%endblock%}
 {%block body%}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+    </style>
+</head>
+<body>
     <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">Introduction to Technical Analysis</h1>
     <h2>2.1– Overview</h2>
 <p>In the previous chapter, we briefly understood what Technical Analysis was about. In this chapter, we will focus on the versatility and the assumptions of Technical Analysis.</p>
@@ -99,4 +124,5 @@ table,td,th{
 <p>The open, high, low, close prices are the main data points from the technical analysis perspective. Each of these prices has to be plotted on the chart and analyzed.</p>
 <p><img loading="lazy" class="size-full wp-image-457 aligncenter" src="http://zerodha.com/varsity/wp-content/uploads/2014/09/M2-Ch1-Chart2.jpg" alt="M2-Ch1-Chart2" width="622" height="349" srcset="https://zerodha.com/varsity/wp-content/uploads/2014/09/M2-Ch1-Chart2.jpg 622w, https://zerodha.com/varsity/wp-content/uploads/2014/09/M2-Ch1-Chart2-300x168.jpg 300w" sizes="(max-width: 622px) 100vw, 622px" /></p>
 <hr />
+</body></html>
 {%endblock%}
