--- a/stock/templates/mindset_investor.html
+++ b/stock/templates/mindset_investor.html
@@ -69,6 +69,31 @@ table,td,th{
 
 {%endblock%}
 {%block body%}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+    </style>
+</head>
+<body>
     <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">Mindset of an Investor</h1>
     <h2>2.1– Speculator Vs Trader Vs Investor</h2>
 <p>Depending on how you would like to participate in the market, you can choose to speculate, trade or invest. All three types of participation are different from one another. One has to take a stance on the type of market participant he would like to be. Having clarity on this can have a huge impact on his Profit &amp; Loss account.</p>
@@ -189,4 +214,6 @@ table,td,th{
 </table>
 <p>Over the next few chapters, we will understand how to read the basic financial statements, as published in the annual report. As you may know, the financial statement is the source for all the number-crunching required to analyse quantitative aspects.</p>
 <hr />
+</body>
+</html>
 {%endblock%}
