--- a/stock/templates/read_annual_report.html
+++ b/stock/templates/read_annual_report.html
@@ -69,6 +69,31 @@ table,td,th{
 
 {%endblock%}
 {%block body%}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+    </style>
+</head>
+<body>
     <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">How to read Annual Report of a company</h1>
     <h2>3.1 – What is an Annual Report?</h2>
 <p>The annual report (AR) is a yearly publication by the company and is sent to the shareholders and other interested parties. The annual report is published by the end of the Financial Year, and all the data made available in the annual report is dated to 31<sup>st</sup> March. The AR is usually available on the company’s website (in the investor&#8217;s section) as a PDF document, or one can contact the company to get a hard copy of the same.</p>
@@ -154,4 +179,6 @@ table,td,th{
 <p><img loading="lazy" class="aligncenter size-full wp-image-947" src="http://zerodha.com/varsity/wp-content/uploads/2014/10/M3-Ch3-chart9.jpg" alt="M3-Ch3-chart9" width="439" height="168" srcset="https://zerodha.com/varsity/wp-content/uploads/2014/10/M3-Ch3-chart9.jpg 597w, https://zerodha.com/varsity/wp-content/uploads/2014/10/M3-Ch3-chart9-300x115.jpg 300w" sizes="(max-width: 439px) 100vw, 439px" /></p>
 <p>Of course, considering you may be new to financial statements, jargon like share capital makes much sense. However, the financial statements are straightforward to understand, and over the next few chapters, you will understand how to read the financial statements and make sense of it. But for now, remember that the main financial statement gives you the summary and the associated schedules give the details about each line item.</p>
 <hr />
+</body>
+</html>
 {%endblock%}
