--- a/stock/templates/single_cad_patterns_part1.html
+++ b/stock/templates/single_cad_patterns_part1.html
@@ -69,6 +69,31 @@ table,td,th{
 
 {%endblock%}
 {%block body%}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+    </style>
+</head>
+<body>
     <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">Single Candlesticks Pattern (Part 1)</h1>
     <h2>5.1 – Overview</h2>
 <p>As the name suggests, a single candlestick pattern is formed by just one candle. So as you can imagine, the trading signal is generated based on 1 day’s trading action. The trades based on a single candlestick pattern can be extremely profitable provided the pattern has been identified and executed correctly.</p>
@@ -135,4 +160,5 @@ table,td,th{
 <p>Earlier in this chapter, we did discuss the length of the candle. One should avoid trading during a minimal (below 1% range) or long candle (above 10% range).</p>
 <p>A small candle indicates subdued trading activity, and hence it would be difficult to identify the direction of the trade. On the other hand, a long candle indicates extreme activity. The problem with lengthy candles would be the placement of stoploss. The stoploss would be deep, and in case the trade goes wrong, the penalty for paying would be painful. For this reason, one should avoid trading on candles that are either too short or too long.</p>
 <hr />
+</body></html>
 {%endblock%}
