--- a/stock/templates/single_cad_patterns_part2.html
+++ b/stock/templates/single_cad_patterns_part2.html
@@ -69,6 +69,31 @@ table,td,th{
 
 {%endblock%}
 {%block body%}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+    </style>
+</head>
+<body>
     <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">Single Candlesticks Pattern (Part 2)</h1>
     <h2>6.1 – The Spinning Top</h2>
 <p>The spinning top is a very interesting candlestick. Unlike the Marubuzo, it does not give the trader a trading signal with specific entry or an exit point. However, the spinning top gives out useful information concerning the current situation in the market. The trader can use this information to position himself in the market.</p>
@@ -146,4 +171,5 @@ table,td,th{
 <p><img loading="lazy" class="aligncenter size-full wp-image-547" src="http://zerodha.com/varsity/wp-content/uploads/2014/09/M2-Ch6-Chart6.jpg" alt="M2-Ch6-Chart6" width="624" height="239" srcset="https://zerodha.com/varsity/wp-content/uploads/2014/09/M2-Ch6-Chart6.jpg 1262w, https://zerodha.com/varsity/wp-content/uploads/2014/09/M2-Ch6-Chart6-300x115.jpg 300w, https://zerodha.com/varsity/wp-content/uploads/2014/09/M2-Ch6-Chart6-1024x392.jpg 1024w" sizes="(max-width: 624px) 100vw, 624px" /></p>
 <p>So the next time you see either a Spinning top or a Doji individually or in a cluster, remember there is indecision in the market. The market could swing either way, and you need to build a stance that adapts to the expected movement in the market.</p>
 <hr />
+</body></html>
 {%endblock%}
