--- a/stock/templates/single_cad_patterns_part3.html
+++ b/stock/templates/single_cad_patterns_part3.html
@@ -69,6 +69,31 @@ table,td,th{
 
 {%endblock%}
 {%block body%}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+    </style>
+</head>
+<body>
     <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">Single Candlesticks Pattern (Part 3)</h1>
     <h2>7.1 – Paper Umbrella</h2>
 <p>The paper umbrella is a single candlestick pattern which helps traders in setting up directional trades. The interpretation of the paper umbrella changes based on where it appears on the chart.</p>
@@ -202,4 +227,5 @@ table,td,th{
 <p>Here is an example, where both the risk-averse and the risk-taker would have initiated the trade based on a shooting star. However, the stoploss has been breached. Do remember, when the stop-loss triggers, the trader will have to exit the trade, as the trade no longer stands valid. More often than not, exiting the trade is the best thing to do when the stoploss triggers.</p>
 <p><img loading="lazy" class="aligncenter size-full wp-image-573" src="http://zerodha.com/varsity/wp-content/uploads/2014/09/M2-Ch7-Chart11.jpg" alt="M2-Ch7-Chart11" width="624" height="243" srcset="https://zerodha.com/varsity/wp-content/uploads/2014/09/M2-Ch7-Chart11.jpg 624w, https://zerodha.com/varsity/wp-content/uploads/2014/09/M2-Ch7-Chart11-300x117.jpg 300w" sizes="(max-width: 624px) 100vw, 624px" /></p>
 <hr />
+</body></html>
 {%endblock%}
