--- a/stock/templates/support_resistance.html
+++ b/stock/templates/support_resistance.html
@@ -69,6 +69,31 @@ table,td,th{
 
 {%endblock%}
 {%block body%}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+    </style>
+</head>
+<body>
     <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">Support and Resistance</h1>
     <p>While discussing candlestick patterns, we had learnt about the entry and the stoploss points. However, the target price was not discussed. We will discuss the same in this chapter.</p>
 <p>The best way to identify the target price is to identify the support and resistance points. The support and resistance (S&amp;R) are specific price points on a chart expected to attract the maximum amount of either buying or selling. The support price is a price at which one can expect more buyers than sellers. Likewise, the resistance price is a price at which one can expect more sellers than buyers.</p>
@@ -204,4 +229,5 @@ Resistance = 214</p>
 </ol>
 <p>From now on in this module, as and when we learn new TA concepts, we will build this checklist. But to quench your curiosity, the final checklist will have 6 checklist points. In fact, when we have the grand 6 checklist points, we will weigh down each one of them. For example, checklist point number 4 may not be as important as point number 1, but it is more important than 100 other factors that distract the trader.</p>
 <hr />
+</body></html>
 {%endblock%}
