--- a/stock/templates/understanding_bal_sheet_2.html
+++ b/stock/templates/understanding_bal_sheet_2.html
@@ -69,6 +69,31 @@ table,td,th{
 
 {%endblock%}
 {%block body%}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+    </style>
+</head>
+<body>
     <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">Understanding Balance Sheet Statement (Part 2)</h1>
     <h2>7.1 – The Assets side of Balance Sheet</h2>
 <p>In the previous chapter, we looked at the liability side of the balance sheet in detail. We will now understand the 2<sup>nd</sup> half of the balance sheet, i.e. the Asset side of the balance sheet. The Asset side shows us all the company&#8217;s assets (in different forms) right from its inception. Assets in simple terms are the resources held by a company, which help in generating the revenues. Here is the snapshot of the Assets side of the balance sheet:</p>
@@ -151,4 +176,6 @@ table,td,th{
 <p>When the company undertakes <strong>Debt</strong> (it could be short term or long term), the company obviously spends money towards financing the debt. The money that goes towards financing the debt is called the <strong>Finance Cost/Borrowing Cost</strong>. Hence, when debt increases the finance cost also increases and vice versa.</p>
 <p>Finally, as you may recall the <strong>Profit after tax (PAT)</strong> adds to the company&#8217;s surplus, which is a part of the <strong>Shareholders equity</strong>.</p>
 <hr />
+</body>
+</html>
 {%endblock%}
