--- a/stock/templates/understanding_p_l_1.html
+++ b/stock/templates/understanding_p_l_1.html
@@ -69,6 +69,31 @@ table,td,th{
 
 {%endblock%}
 {%block body%}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+    </style>
+</head>
+<body>
     <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">Understanding the P&L statement (Part 1)</h1>
     <h2>4.1 – Overview of the financial statements</h2>
 <p>You can think about the financial statements from two different angles:</p>
@@ -136,4 +161,6 @@ table,td,th{
 <p>As we can see, the other income includes income that is not related to the company&#8217;s main business. It includes interest on bank deposits, dividends, insurance claims, royalty income etc. Usually the other income forms (and it should) a small portion of the total income. A large ‘other income’ usually draws a red flag, demanding a further investigation.</p>
 <p>So adding up revenue from operations (Rs.3436 Crs) and other income (Rs.45 Crs), we have the total revenue for FY14 at Rs.3482Crs.</p>
 <hr />
+</body>
+</html>
 {%endblock%}
