--- a/stock/templates/understanding_p_l_2.html
+++ b/stock/templates/understanding_p_l_2.html
@@ -69,6 +69,31 @@ table,td,th{
 
 {%endblock%}
 {%block body%}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+    </style>
+</head>
+<body>
     <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">Understanding the P&L statement (Part 2)</h1>
     <h2>5.1 – The Expense details</h2>
 <p>In the previous chapter, we had learnt about the revenues a company generates. Moving further on the P&amp;L statement, in this chapter, we will look at the expense side of the Profit and Loss Statement along with the associated notes. Expenses are generally classified according to their function, which is also called the cost of sales method or based on the expense&#8217;s nature. An analysis of the expenses must be shown in the Profit and Loss statement or the notes. As you can see in the extract below, almost all the line items have a note associated with it.</p>
@@ -128,4 +153,6 @@ table,td,th{
 <p><img loading="lazy" class="aligncenter size-full wp-image-980" src="http://zerodha.com/varsity/wp-content/uploads/2014/10/M3-Ch5-chart11.jpg" alt="M3-Ch5-chart11" width="541" height="519" /></p>
 <p>Hopefully, the statement above should look more meaningful to you by now. Remember, almost all line items in the P&amp;L statement will have an associated note. You can always look into the notes to seek greater clarity. Also, we have just understood how to read the P&amp;L statement at this stage, but we still need to analyze what the numbers mean. We will do this when we take up the financial ratios. The P&amp;L statement is also very closely connected with the other two financial statements, i.e. the balance sheet and the cash flow statement. We will explore these connections at a later stage.</p>
 <hr />
+</body>
+</html>
 {%endblock%}
