--- a/stock/templates/volumes.html
+++ b/stock/templates/volumes.html
@@ -69,6 +69,31 @@ table,td,th{
 
 {%endblock%}
 {%block body%}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+    </style>
+</head>
+<body>
     <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">Volumes</h1>
     <p>Volume plays a very integral role in technical analysis as it helps us to confirm trends and patterns. Consider volumes as a means to gain insights into how other participants perceive the market.</p>
 
@@ -292,4 +317,5 @@ Average Volume = Today’s volume = last 10 days average volume</p>
 </li>
 </ol>
 <hr />
+</body></html>
 {%endblock%}
