--- a/stock/templates/moving_averages.html
+++ b/stock/templates/moving_averages.html
@@ -69,6 +69,31 @@ table,td,th{
 
 {%endblock%}
 {%block body%}
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        p {
+            color: white;
+        }
+        ol {
+            color: white;
+        }
+        h2 {
+            color: yellow;
+        }
+        li {
+            color: white;
+        }
+        ul {
+            color: white;
+        }
+        h3 {
+            color: #A0D8B3;
+        }
+    </style>
+</head>
+<body>
     <h1 style="margin-top: 15px; margin-bottom:30px;text-align:center; color: yellow; font-family: Times New Roman, Times, serif; font-weight: bold;">Moving Averages</h1>
     <p>We have all learnt about averages in school, moving average is just an extension of that. Moving averages are trend indicators and are frequently used due to their simplicity and effectiveness. Before we learn moving averages, let us have a quick recap on how averages are calculated.</p>
 
@@ -497,5 +522,5 @@ table,td,th{
 <p>Needless to say, the MA crossover system can also be applied for intraday trading. For instance, one could use the 15 x 30 minutes crossover to identify intraday opportunities. A more aggressive trader could use a 5 x 10-minute crossover.</p>
 <p>You may have heard this popular saying in the markets – “The trend is your, friend”. Well, the moving averages help you identify this friend.</p>
 <p>Remember, MA is a trend following system &#8211; as long as there is a trend, the moving averages work brilliantly. It does not matter which time frame you use or which cross over combination you use.</p>
-<hr />
+<hr /> </body></html>
 {%endblock%}
